src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/negative-step-error.tessla
in a: Events[Int]
out a